--- a/anime/opsMobile.css
+++ b/anime/opsMobile.css
@@ -1,3 +1,3 @@
 *{font-size:50px}
-img{width:380px}
+img{width:380px;height:203px}
 h1{padding:50px}
